--- a/Frontend/dashboardUI.ui
+++ b/Frontend/dashboardUI.ui
@@ -208,7 +208,6 @@ QPushButton::hover {
                <property name="font">
                 <font>
                  <pointsize>10</pointsize>
-                 <weight>75</weight>
                  <bold>true</bold>
                 </font>
                </property>
@@ -807,7 +806,7 @@ QPushButton:pressed {
              <item>
               <widget class="QStackedWidget" name="main_display_widget">
                <property name="currentIndex">
-                <number>3</number>
+                <number>5</number>
                </property>
                <widget class="QWidget" name="Account_setting_page">
                 <property name="styleSheet">
@@ -831,7 +830,6 @@ QWidget#Account_setting_page {
                    <property name="font">
                     <font>
                      <pointsize>14</pointsize>
-                     <weight>75</weight>
                      <bold>true</bold>
                     </font>
                    </property>
@@ -927,7 +925,6 @@ QPushButton::pressed {
                          <property name="font">
                           <font>
                            <pointsize>9</pointsize>
-                           <weight>50</weight>
                            <bold>false</bold>
                           </font>
                          </property>
@@ -953,7 +950,6 @@ QPushButton::pressed {
                          <property name="font">
                           <font>
                            <pointsize>9</pointsize>
-                           <weight>50</weight>
                            <bold>false</bold>
                           </font>
                          </property>
@@ -1009,7 +1005,6 @@ QPushButton::pressed {
                           <property name="font">
                            <font>
                             <pointsize>11</pointsize>
-                            <weight>75</weight>
                             <bold>true</bold>
                            </font>
                           </property>
@@ -1139,7 +1134,6 @@ QPushButton::pressed {
                                    <property name="font">
                                     <font>
                                      <pointsize>12</pointsize>
-                                     <weight>75</weight>
                                      <bold>true</bold>
                                     </font>
                                    </property>
@@ -1790,8 +1784,13 @@ border-radius: 5px;</string>
                      <height>24</height>
                     </rect>
                    </property>
+                   <property name="styleSheet">
+                    <string notr="true">background-color: black;
+color: white;
+border-radius: 10px</string>
+                   </property>
                    <property name="text">
-                    <string>PushButton</string>
+                    <string>Add</string>
                    </property>
                   </widget>
                   <widget class="QPushButton" name="pushButton_2">
@@ -1803,8 +1802,13 @@ border-radius: 5px;</string>
                      <height>24</height>
                     </rect>
                    </property>
+                   <property name="styleSheet">
+                    <string notr="true">background-color: black;
+color: white;
+border-radius: 10px</string>
+                   </property>
                    <property name="text">
-                    <string>PushButton</string>
+                    <string>Remove</string>
                    </property>
                   </widget>
                   <widget class="QPushButton" name="pushButton_3">
@@ -1816,8 +1820,13 @@ border-radius: 5px;</string>
                      <height>24</height>
                     </rect>
                    </property>
+                   <property name="styleSheet">
+                    <string notr="true">background-color: black;
+color: white;
+border-radius: 10px</string>
+                   </property>
                    <property name="text">
-                    <string>PushButton</string>
+                    <string>Update</string>
                    </property>
                   </widget>
                   <widget class="QLabel" name="mangePS_label_2">
@@ -1969,7 +1978,7 @@ border-radius: 5px;</string>
                   <property name="styleSheet">
                    <string notr="true">background-color: black;
 color: white;
-border-radius: 12px</string>
+border-radius: 10px</string>
                   </property>
                   <property name="text">
                    <string>Add</string>
@@ -1987,7 +1996,7 @@ border-radius: 12px</string>
                   <property name="styleSheet">
                    <string notr="true">background-color: black;
 color: white;
-border-radius: 12px</string>
+border-radius: 10px</string>
                   </property>
                   <property name="text">
                    <string>Remove</string>
@@ -2005,10 +2014,10 @@ border-radius: 12px</string>
                   <property name="styleSheet">
                    <string notr="true">background-color: black;
 color: white;
-border-radius: 12px</string>
+border-radius: 10px</string>
                   </property>
                   <property name="text">
-                   <string>PushButton</string>
+                   <string>Update</string>
                   </property>
                  </widget>
                  <widget class="QLineEdit" name="lineEdit_31">
@@ -2190,7 +2199,6 @@ QHeaderView::section {
                              <property name="font">
                               <font>
                                <pointsize>10</pointsize>
-                               <weight>75</weight>
                                <bold>true</bold>
                               </font>
                              </property>
@@ -2401,7 +2409,6 @@ QPushButton::pressed {
                                 <property name="font">
                                  <font>
                                   <pointsize>10</pointsize>
-                                  <weight>75</weight>
                                   <bold>true</bold>
                                  </font>
                                 </property>
